--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-.idea
+##############################
+## Java
+##############################
+.mtj.tmp/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
+
+##############################
+## IntelliJ
+##############################
+*/out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
