--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ hs_err_pid*
 ##############################
 ## IntelliJ
 ##############################
-*/out/
+out/
 .idea/
 .idea_modules/
 *.iml
